force-app/main/default/objects/Jira_Incidents__c/Jira_Incidents__c.object-meta.xml
<CustomObject>
    <label>Jira Incidents</label>
    <nameField>
        <label>Jira Incident Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jira Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>