force-app/main/default/objects/Jira_Incidents__c/fields/Ext_Defect_ID__c.field-meta.xml
<CustomField>
    <fullName>Ext_Defect_ID__c</fullName>
    <label>Ext Defect ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>