force-app/main/default/objects/Jira_Incidents__c/fields/Issue_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Issue_Created_Date_Time__c</fullName>
    <label>Issue Created Date Time</label>
    <type>DateTime</type>
</CustomField>