force-app/main/default/objects/Jira_Incidents__c/fields/Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>Issue_Key__c</fullName>
    <label>Issue Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>