force-app/main/default/objects/Jira_Incidents__c/fields/Issue_Status__c.field-meta.xml
<CustomField>
    <fullName>Issue_Status__c</fullName>
    <label>Issue Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>