force-app/main/default/objects/Jira_Incidents__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>200</length>
    <type>Text</type>
</CustomField>