force-app/main/default/objects/Jira_Incidents__c/fields/ROWNO__c.field-meta.xml
<CustomField>
    <fullName>ROWNO__c</fullName>
    <label>ROWNO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>