force-app/main/default/objects/Jira_Incidents__c/fields/SLA_DAYS_OPEN__c.field-meta.xml
<CustomField>
    <fullName>SLA_DAYS_OPEN__c</fullName>
    <label>SLA DAYS OPEN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>