force-app/main/default/objects/Jira_Incidents__c/fields/Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Year_Month__c</fullName>
    <label>Year Month</label>
    <length>200</length>
    <type>Text</type>
</CustomField>